01-k8s-app/k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  labels:
    app: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
      - name: deployment-frontend
        image: rcastro95/portfolio-frontend:latest
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
          capabilities:
            add:
              - NET_BIND_SERVICE
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 5
        ports:
        - containerPort: 80
