01-k8s-app/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  type: ClusterIP
  selector:
    app: portfolio-backend
  ports:
    - port: 80
      targetPort: 5000
