01-k8s-app/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
    - port: 80
      targetPort: 80
