01-k8s-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-backend
spec:
  ingressClassName: nginx
  rules:
  - host: fase2.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend
            port:
              number: 80
